# dev-templates

./: README.md
docker/: Dockerfile-aws-python-layer
python/: .pre-commit-config.yaml  pylintrc  ruff.toml
python-templates/: pyproject.toml
