[project]
name = "my_project"
version = "0.1.0"
description = "A short description of your project"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"

# Optional: dependencies if you want to declare them here
dependencies = [
    "requests>=2.31",
]

# Optional: optional dependencies (dev, test, etc.)
[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

# Tool configurations
[tool.ruff]
# You can configure Ruff here if desired

[tool.black]

